# bor

./: .gitignore  Cargo.toml  README.md  justfile
crates/accounts/: Cargo.toml  README.md  build.rs
crates/accounts/proto/: accounts.proto
crates/accounts/src/: aggregate.rs  command.rs  error.rs  event.rs  lib.rs  main.rs  util.rs
crates/authorization/: Cargo.toml  README.md  build.rs
crates/authorization/proto/: auth.proto
crates/authorization/src/: main.rs
crates/base/: Cargo.toml
crates/base/src/: lib.rs  trace.rs  util.rs
crates/base/src/correlation/: mod.rs  multi.rs  originator.rs  simple.rs
crates/base/src/ddd/: aggregate.rs  constants.rs  entity.rs  event.rs  metadata.rs  mod.rs
crates/base/src/fsm/: mod.rs
crates/base/src/interceptor/: chain.rs  mod.rs
crates/base/src/message/: consumer.rs  generic.rs  handler.rs  mod.rs  payload.rs  processor.rs
crates/base/src/saga/: mod.rs  orchestrate.rs  task.rs
crates/base/src/tester/: executor.rs  framework.rs  mod.rs  validator.rs
crates/base/src/transaction/: mod.rs
crates/base/src/uow/: mod.rs  registry.rs  trx.rs  unit_of_work.rs  unit_of_work_old.rs
crates/base/tests/: data.rs  handler_tests.rs  registry_tests.rs  uow_tests.rs
crates/card/: Cargo.toml  README.md  build.rs
crates/card/src/: aggregate.rs  command.rs  error.rs  event.rs  lib.rs  payload.rs  service.rs
crates/card/tests/: card_test.rs
crates/transaction/: .Cargo 2.toml.icloud  Cargo.toml  README.md  build.rs
crates/transaction/proto/: transaction.proto
crates/transaction/src/: main.rs
crates/web/: Cargo.toml  README.md
crates/web-ui/: Cargo.toml  Makefile
crates/web-ui/src/: main.rs
crates/web/src/: error.rs  log.rs  main.rs  model.rs
crates/web/src/web/: mod.rs  mw_auth.rs  mw_ctx.rs  routes_login.rs  routes_tickets.rs
crates/web/tests/: quick_dev.rs
docker/: Dockerfile  docker-compose.yaml
docker/grafana/: .datasource 2.yaml.icloud
docker/prometheus/: .prometheus 2.yaml.icloud
docs/: arch.md  sandbox.md  trx_mangager.md  uow.md
