[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base", version = "0.1.0" }

anyhow = "1.0"
async-trait = "0.1"
prost = "0.11"
serde = "1"
strum_macros = "0.24"
thiserror = "1.0"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
tracing-test = "0.2"

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.9"
