[package]
name = "base"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
async-trait = "0.1"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-opentelemetry = "0.18"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
ctor = "0.2"