[package]
name = "card"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
cqrs-es = "0.4"
dotenv = "0.15"
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.25", features = ["derive"] }
thiserror = "1.0"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
tracing-opentelemetry = "0.19"
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
futures = "0.3"
rstest = "0.18"

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.9"