[package]
name = "transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base", version = "0.1.0" }

anyhow = "1.0"
async-trait = "0.1"
prost = "0.11"
thiserror = "1.0"
tonic = "0.9"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.9"