[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
base = { path = "../base", version = "0.1.0" }

axum = { version = "0.6", features = ["macros"] }
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "2"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
rdkafka = "0.29"
lazy-regex = "2"
strum_macros = "0.24"
uuid = { version = "1", features = ["v4", "fast-rng"] }
chrono = "0.4.24"

[dev-dependencies]
anyhow = "1.0"
httpc-test = "0.1"
